--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,8 @@ version: 0.2
 
 env:
   variables:
-    AWS_ACCOUNT_ID: "YOUR_AWS_ACCOUNT_ID"
-    AWS_DEFAULT_REGION: "YOUR_AWS_REGION"
+    AWS_ACCOUNT_ID: "671011453439"
+    AWS_DEFAULT_REGION: "ap-northeast-1"
     IMAGE_REPO_NAME: "my-webapp-repo-github"
     ECS_CLUSTER_NAME: "my-cluster"
     ECS_SERVICE_NAME: "my-webapp-service"
